feat: agregar app landing y configuraciones en el settings para la nueva app

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@
 /.vscode
 /.vscode/**
 /vapid.json
+**.pyc
 #eliminar archivos de github pero conservar en local
 #git rm --cached archivo.ext
 #git rm --cached -r carpeta
